# students_homework

./: README.md  Taskfile.yml  pyproject.toml
.github/workflows/: ci.yml
0_example/: example.py  task.md  test_example.py
1_strings/1_two_string_array_equivalent/: test_is_array_string_are_equal.py
1_strings/2_sentence_is_pangram/: test_is_sentence_is_pangram.py
1_strings/3_maximum_number_of_words/: main.py  test_get_max_number_of_words_from_sentences.py
1_strings/4_safe_text/: main.py  test_recover_article.py
2_dicts/1_task/: employees.py  test_get_parsed_employees_info.py
2_dicts/2_task/: test_top_10_most_common_words.py
2_dicts/3_task/: test_format_phone.py
3_functions/1_phone_text_code/decode/: decode.py
3_functions/2_functional_programming/: calculator.py
4_decorators/retry/: retry.py
6_classes/1_metrics/: helpers.py  metrics.py  test_metrics.py
docs/: setup-environment.md  submission-guide.md  taskfile-installation.md
