[project]
name = "students-homework"
version = "0.1.0"
description = "Students homework project"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.5.0",
    "cfgv==3.4.0",
    "distlib==0.3.7",
    "filelock==3.12.3",
    "identify==2.5.27",
    "iniconfig==2.0.0",
    "nodeenv==1.8.0",
    "packaging==23.1",
    "platformdirs==3.10.0",
    "pluggy==1.3.0",
    "pre-commit==3.4.0",
    "pydantic==2.3.0",
    "pydantic_core==2.6.3",
    "pytest==7.4.2",
    "PyYAML==6.0.1",
    "ruff==0.6.5",
    "setuptools==74.1.2",
    "typing_extensions==4.7.1",
    "virtualenv==20.24.5",
]

[project.optional-dependencies]
dev = [
    "pre-commit==3.4.0",
    "pytest==7.4.2",
    "ruff==0.6.5",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.ruff]
# Set the maximum line length to 120.
line-length = 120
exclude = ["test*"]

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501", "I"]

[tool.ruff.lint.pydocstyle]
convention = "google"